reworked nav a bit because of slight shift i couldnt resolve

--- a/src/app/display-recipes/display-recipes.component.scss
+++ b/src/app/display-recipes/display-recipes.component.scss
@@ -1,12 +1,14 @@
 @import "/src/assets/styles/variables.scss";
+@import "/src/assets/styles/mixins.scss";
+
 .background-container.recipes {
+  padding: 10rem;
   display: flex;
   justify-content: flex-start;
   .recipe__container {
+    position: relative;
     display: flex;
-    width: 42vw;
     flex-direction: column;
-    margin: 8rem 3rem;
     gap: 2rem;
 
     &-category {
@@ -45,9 +47,10 @@
         flex-wrap: wrap;
         align-items: center;
         justify-content: flex-start;
+        height: auto;
+        width: 100%;
         & img {
-          // TODO Something here messes up the nav
-          width: 60%;
+          width: 50%;
           margin: 10px;
           border-radius: 15px;
           transition: 0.5s;
@@ -75,9 +78,14 @@
           user-select: none;
           text-wrap: wrap;
           text-align: center;
-          max-width: 15vw;
+          max-width: 20vw;
         }
       }
     }
   }
+}
+.searchbox {
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
