--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -5,12 +5,17 @@
     flex-direction: row;
     justify-content: space-between;
   }
-  position: absolute;
+  position: sticky;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  height: 10vh;
+  height: 5vh;
   width: 100%;
+  z-index: 100;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000,
+    2px 2px 0 #000;
 
   .burger__menu {
     @include from-md {
@@ -57,6 +62,7 @@
     @include from-md {
       padding: unset;
       width: 100% !important;
+      position: static;
     }
     width: 100%;
     height: 100vh;
