--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,12 +3,10 @@
 body {
   background-color: #000;
 }
-
 .background-container {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  position: relative;
   min-height: 100vh;
   background-attachment: fixed;
 
